--- a/package.json
+++ b/package.json
@@ -82,13 +82,13 @@
 		}
 	},
 	"dependencies": {
+		"@electron/remote": "^1.2.0",
 		"@levminer/speakeasy": "^1.3.1",
 		"auto-launch": "^5.0.5",
 		"bcryptjs": "^2.4.3",
 		"cryptr": "^6.0.2",
 		"electron-context-menu": "^3.1.1",
 		"electron-debug": "^3.2.0",
-		"electron-util": "^0.17.0",
 		"node-fetch": "^2.6.1",
 		"protons": "^2.0.1",
 		"qrcode": "^1.4.4",
@@ -96,7 +96,7 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.3.1",
-		"electron": "^13.1.7",
+		"electron": "^15.0.0-alpha.1",
 		"electron-builder": "^22.11.7",
 		"eslint": "^7.31.0",
 		"eslint-config-node": "^4.1.0",
