--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
 	"scripts": {
 		"start": "node scripts/alpha-build.js && electron .",
 		"dev": "electron .",
-		"build": "electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
-		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
-		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
-		"build:test": "node scripts/alpha-build.js && electron-builder --publish=never --x64 --dir -c scripts/test-build.json | gnomon --type=elapsed-total --quiet",
+		"build": "electron-builder --publish=never --x64",
+		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64",
+		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64",
+		"build:test": "node scripts/alpha-build.js && electron-builder --publish=never --x64 --dir -c scripts/test-build.json",
 		"build:df": "sass src/dragonfly.scss src/dragonfly.css --no-source-map --style compressed",
 		"build:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify",
 		"watch:df": "sass src/dragonfly.scss src/dragonfly.css --no-source-map --style compressed --watch",
@@ -82,7 +82,7 @@
 		}
 	},
 	"dependencies": {
-		"@electron/remote": "^1.2.0",
+		"@electron/remote": "^1.2.1",
 		"@levminer/speakeasy": "^1.3.1",
 		"auto-launch": "^5.0.5",
 		"bcryptjs": "^2.4.3",
@@ -96,9 +96,9 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.3.1",
-		"electron": "^15.0.0-alpha.1",
+		"electron": "^13.1.8",
 		"electron-builder": "^22.11.7",
-		"eslint": "^7.31.0",
+		"eslint": "^7.32.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
@@ -107,10 +107,9 @@
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-promise": "^5.1.0",
 		"eslint-plugin-standard": "^5.0.0",
-		"gnomon": "1.4.6",
-		"prettier": "^2.3.1",
-		"sass": "^1.35.2",
-		"tailwindcss": "^2.2.5"
+		"prettier": "^2.3.2",
+		"sass": "^1.37.5",
+		"tailwindcss": "^2.2.7"
 	},
 	"engines": {
 		"node": ">=15.0.0",
