--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -6,7 +6,7 @@ assignees:
 body:
 - type: checkboxes
   attributes:
-    label: Before the report.
+    label: Before the feature request.
     description: Please ensure you've completed all of the following.
     options:
       - label: I have searched the [Github Issues](https://www.github.com/electron/levminer/issues) for a feature request that matches the one I want to file, without success.
