--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
 	"name": "authme",
-	"version": "2.6.0",
-	"tag": "2.6.0",
-	"release": "2020. July 13.",
-	"description": "A simple 2FA app for desktop built with Electron and Node.js.",
+	"productName": "Authme",
+	"version": "2.6.1",
+	"tag": "2.6.1",
+	"description": "Simple cross platform two-factor authentication app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
 	"scripts": {
 		"start": "node scripts/alpha-build.js && electron .",
 		"dev": "electron .",
-		"build": "electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
-		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
-		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
-		"build:test": "node scripts/alpha-build.js && electron-builder --publish=never --x64 --dir -c scripts/test-build.json | gnomon --type=elapsed-total --quiet",
+		"build": "electron-builder --publish=never --x64",
+		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64",
+		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64",
+		"build:test": "node scripts/alpha-build.js && electron-builder --publish=never --x64 --dir -c scripts/test-build.json",
 		"build:df": "sass src/dragonfly.scss src/dragonfly.css --no-source-map --style compressed",
 		"build:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify",
 		"watch:df": "sass src/dragonfly.scss src/dragonfly.css --no-source-map --style compressed --watch",
@@ -22,7 +22,6 @@
 	},
 	"main": "main.js",
 	"build": {
-		"productName": "Authme",
 		"appId": "com.levminer.authme",
 		"files": [
 			"!screenshots",
@@ -82,23 +81,23 @@
 		}
 	},
 	"dependencies": {
+		"@electron/remote": "^1.2.1",
 		"@levminer/speakeasy": "^1.3.1",
 		"auto-launch": "^5.0.5",
 		"bcryptjs": "^2.4.3",
 		"cryptr": "^6.0.2",
 		"electron-context-menu": "^3.1.1",
 		"electron-debug": "^3.2.0",
-		"electron-util": "^0.17.0",
 		"node-fetch": "^2.6.1",
 		"protons": "^2.0.1",
 		"qrcode": "^1.4.4",
 		"qrcode-decoder": "^0.2.2"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.3.0",
-		"electron": "^13.1.6",
+		"autoprefixer": "^10.3.1",
+		"electron": "^13.1.8",
 		"electron-builder": "^22.11.7",
-		"eslint": "^7.30.0",
+		"eslint": "^7.32.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
@@ -107,10 +106,9 @@
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-promise": "^5.1.0",
 		"eslint-plugin-standard": "^5.0.0",
-		"gnomon": "1.4.6",
-		"prettier": "^2.3.1",
-		"sass": "^1.35.2",
-		"tailwindcss": "^2.2.4"
+		"prettier": "^2.3.2",
+		"sass": "^1.37.5",
+		"tailwindcss": "^2.2.7"
 	},
 	"engines": {
 		"node": ">=15.0.0",
