--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 	},
 	"dependencies": {
 		"@electron/remote": "^1.2.1",
+		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
 		"auto-launch": "^5.0.5",
 		"bcryptjs": "^2.4.3",
@@ -95,7 +96,7 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.3.1",
-		"electron": "^13.1.8",
+		"electron": "^13.1.9",
 		"electron-builder": "^22.11.7",
 		"eslint": "^7.32.0",
 		"eslint-config-node": "^4.1.0",
