--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "authme",
 	"productName": "Authme",
-	"version": "2.6.1",
-	"tag": "2.6.1",
+	"version": "2.7.0",
+	"tag": "2.7.0",
 	"description": "Simple cross platform two-factor authentication app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -82,6 +82,7 @@
 	},
 	"dependencies": {
 		"@electron/remote": "^1.2.1",
+		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
 		"auto-launch": "^5.0.5",
 		"bcryptjs": "^2.4.3",
@@ -89,13 +90,13 @@
 		"electron-context-menu": "^3.1.1",
 		"electron-debug": "^3.2.0",
 		"node-fetch": "^2.6.1",
-		"protons": "^2.0.1",
+		"protons": "^2.0.3",
 		"qrcode": "^1.4.4",
 		"qrcode-decoder": "^0.2.2"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.3.1",
-		"electron": "^13.1.8",
+		"autoprefixer": "^10.3.4",
+		"electron": "^14.0.1",
 		"electron-builder": "^22.11.7",
 		"eslint": "^7.32.0",
 		"eslint-config-node": "^4.1.0",
@@ -103,12 +104,12 @@
 		"eslint-config-promise": "^2.0.2",
 		"eslint-config-standard": "^16.0.3",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "^3.4.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^5.1.0",
 		"eslint-plugin-standard": "^5.0.0",
-		"prettier": "^2.3.2",
-		"sass": "^1.37.5",
-		"tailwindcss": "^2.2.7"
+		"prettier": "^2.4.0",
+		"sass": "^1.40.1",
+		"tailwindcss": "^2.2.15"
 	},
 	"engines": {
 		"node": ">=15.0.0",
