--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"@electron/remote": "^2.0.1",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
+		"@sentry/electron": "^2.5.4",
 		"auto-launch": "^5.0.5",
 		"bcryptjs": "^2.4.3",
 		"cryptr": "^6.0.2",
