--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
 	"name": "authme",
 	"productName": "Authme",
-	"version": "2.7.1",
-	"tag": "2.7.1",
+	"version": "2.7.2",
+	"tag": "2.7.2",
 	"description": "Simple cross platform two-factor authentication app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
 	"scripts": {
 		"start": "node scripts/alpha-build.js && electron .",
-		"dev": "electron .",
-		"build": "electron-builder --publish=never --x64",
+		"dev": "node scripts/release-build.js && electron .",
+		"build": "npm run build:release",
 		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64",
 		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64",
 		"build:test": "node scripts/alpha-build.js && electron-builder --publish=never --x64 --dir -c scripts/test-build.json",
@@ -25,7 +25,6 @@
 		"appId": "com.levminer.authme",
 		"files": [
 			"!screenshots",
-			"!extract",
 			"!sample",
 			"!scripts",
 			"!**/*.scss",
@@ -81,23 +80,24 @@
 		}
 	},
 	"dependencies": {
-		"@electron/remote": "^1.2.1",
+		"@electron/remote": "^2.0.1",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
+		"@sentry/electron": "^2.5.4",
 		"auto-launch": "^5.0.5",
 		"bcryptjs": "^2.4.3",
 		"cryptr": "^6.0.2",
 		"electron-context-menu": "^3.1.1",
 		"electron-debug": "^3.2.0",
-		"node-fetch": "^2.6.1",
+		"node-fetch": "^2.6.5",
 		"protons": "^2.0.3",
 		"qrcode": "^1.4.4",
 		"qrcode-decoder": "^0.2.2"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.3.4",
-		"electron": "^14.0.1",
-		"electron-builder": "^22.11.7",
+		"autoprefixer": "^10.3.7",
+		"electron": "^15.1.2",
+		"electron-builder": "^22.13.1",
 		"eslint": "^7.32.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
@@ -107,9 +107,9 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^5.1.0",
 		"eslint-plugin-standard": "^5.0.0",
-		"prettier": "^2.4.0",
-		"sass": "^1.40.1",
-		"tailwindcss": "^2.2.15"
+		"prettier": "^2.4.1",
+		"sass": "^1.42.1",
+		"tailwindcss": "^2.2.16"
 	},
 	"engines": {
 		"node": ">=15.0.0",
