--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "authme",
 	"productName": "Authme",
-	"version": "2.7.2",
-	"tag": "2.7.2",
+	"version": "2.7.3",
+	"tag": "2.7.3",
 	"description": "Simple cross platform two-factor authentication app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -83,7 +83,7 @@
 		"@electron/remote": "^2.0.1",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
-		"@sentry/electron": "^2.5.4",
+		"@sentry/electron": "^3.0.0-beta.1",
 		"auto-launch": "^5.0.5",
 		"bcryptjs": "^2.4.3",
 		"cryptr": "^6.0.2",
