--- a/package.json
+++ b/package.json
@@ -95,8 +95,9 @@
 		"qrcode-decoder": "^0.2.2"
 	},
 	"devDependencies": {
+		"@tailwindcss/forms": "^0.3.4",
 		"autoprefixer": "^10.3.7",
-		"electron": "^15.1.2",
+		"electron": "^15.3.0",
 		"electron-builder": "^22.13.1",
 		"eslint": "^7.32.0",
 		"eslint-config-node": "^4.1.0",
