--- a/package.json
+++ b/package.json
@@ -85,11 +85,11 @@
 		"@levminer/speakeasy": "^1.3.1",
 		"@sentry/electron": "^3.0.0-beta.1",
 		"auto-launch": "^5.0.5",
+		"axios": "^0.23.0",
 		"bcryptjs": "^2.4.3",
 		"cryptr": "^6.0.2",
 		"electron-context-menu": "^3.1.1",
 		"electron-debug": "^3.2.0",
-		"node-fetch": "^2.6.5",
 		"protons": "^2.0.3",
 		"qrcode": "^1.4.4",
 		"qrcode-decoder": "^0.2.2"
@@ -99,17 +99,17 @@
 		"autoprefixer": "^10.3.7",
 		"electron": "^15.1.2",
 		"electron-builder": "^22.13.1",
-		"eslint": "^7.32.0",
+		"eslint": "^8.1.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
 		"eslint-config-standard": "^16.0.3",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-promise": "^5.1.0",
+		"eslint-plugin-promise": "^5.1.1",
 		"eslint-plugin-standard": "^5.0.0",
 		"prettier": "^2.4.1",
-		"sass": "^1.43.2",
+		"sass": "^1.43.3",
 		"tailwindcss": "^2.2.17"
 	},
 	"engines": {
