--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "authme",
 	"productName": "Authme",
-	"version": "2.7.2",
-	"tag": "2.7.2",
+	"version": "2.7.3",
+	"tag": "2.7.3",
 	"description": "Simple cross platform two-factor authentication app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -83,33 +83,34 @@
 		"@electron/remote": "^2.0.1",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
-		"@sentry/electron": "^2.5.4",
+		"@sentry/electron": "^3.0.0-beta.1",
 		"auto-launch": "^5.0.5",
+		"axios": "^0.24.0",
 		"bcryptjs": "^2.4.3",
 		"cryptr": "^6.0.2",
 		"electron-context-menu": "^3.1.1",
 		"electron-debug": "^3.2.0",
-		"node-fetch": "^2.6.5",
 		"protons": "^2.0.3",
 		"qrcode": "^1.4.4",
 		"qrcode-decoder": "^0.2.2"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.3.7",
+		"@tailwindcss/forms": "^0.3.4",
+		"autoprefixer": "^10.4.0",
 		"electron": "^15.1.2",
 		"electron-builder": "^22.13.1",
-		"eslint": "^7.32.0",
+		"eslint": "^8.1.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
 		"eslint-config-standard": "^16.0.3",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-promise": "^5.1.0",
+		"eslint-plugin-promise": "^5.1.1",
 		"eslint-plugin-standard": "^5.0.0",
 		"prettier": "^2.4.1",
-		"sass": "^1.42.1",
-		"tailwindcss": "^2.2.16"
+		"sass": "^1.43.4",
+		"tailwindcss": "^2.2.19"
 	},
 	"engines": {
 		"node": ">=15.0.0",
