--- a/package.json
+++ b/package.json
@@ -83,21 +83,19 @@
 		"@electron/remote": "^2.0.1",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
-		"@sentry/electron": "^3.0.0-beta.1",
 		"auto-launch": "^5.0.5",
 		"axios": "^0.24.0",
 		"bcryptjs": "^2.4.3",
-		"cryptr": "^6.0.2",
 		"electron-context-menu": "^3.1.1",
 		"electron-debug": "^3.2.0",
 		"protons": "^2.0.3",
-		"qrcode": "^1.4.4",
-		"qrcode-decoder": "^0.2.2"
+		"qrcode-decoder": "^0.2.2",
+		"qrcode-generator": "^1.4.4"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.3.4",
 		"autoprefixer": "^10.4.0",
-		"electron": "^15.1.2",
+		"electron": "^16.0.0",
 		"electron-builder": "^22.13.1",
 		"eslint": "^8.2.0",
 		"eslint-config-node": "^4.1.0",
