--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
 		"bcryptjs": "^2.4.3",
 		"electron-context-menu": "^3.1.1",
 		"electron-debug": "^3.2.0",
+		"electron-updater": "^4.6.2",
 		"protons": "^2.0.3",
 		"qrcode-decoder": "^0.2.2",
 		"qrcode-generator": "^1.4.4"
@@ -96,7 +97,7 @@
 		"@tailwindcss/forms": "^0.3.4",
 		"autoprefixer": "^10.4.0",
 		"electron": "^16.0.1",
-		"electron-builder": "^22.13.1",
+		"electron-builder": "^22.14.5",
 		"eslint": "^8.2.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
