--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"@electron/remote": "^2.0.1",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
+		"@treverix/custom-electron-titlebar": "^4.2.0",
 		"auto-launch": "^5.0.5",
 		"axios": "^0.24.0",
 		"bcryptjs": "^2.4.3",
@@ -96,9 +97,9 @@
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.3.4",
 		"autoprefixer": "^10.4.0",
-		"electron": "^16.0.1",
+		"electron": "^16.0.2",
 		"electron-builder": "^22.14.5",
-		"eslint": "^8.2.0",
+		"eslint": "^8.3.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
@@ -107,8 +108,8 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^5.1.1",
 		"eslint-plugin-standard": "^5.0.0",
-		"prettier": "^2.4.1",
-		"sass": "^1.43.4",
+		"prettier": "^2.5.0",
+		"sass": "^1.43.5",
 		"tailwindcss": "^2.2.19"
 	},
 	"engines": {
