--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "authme",
 	"productName": "Authme",
-	"version": "2.7.3",
-	"tag": "2.7.3",
+	"version": "3.0.0-beta.0",
 	"description": "Simple cross platform two-factor authentication app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -11,11 +10,11 @@
 		"dev": "node scripts/release-build.js && electron .",
 		"build": "npm run build:release",
 		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64",
+		"build:beta": "node scripts/beta-build.js && electron-builder --publish=never --x64",
 		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64",
 		"build:test": "node scripts/alpha-build.js && electron-builder --publish=never --x64 --dir -c scripts/test-build.json",
-		"build:df": "sass src/dragonfly.scss src/dragonfly.css --no-source-map --style compressed",
-		"build:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify",
-		"watch:df": "sass src/dragonfly.scss src/dragonfly.css --no-source-map --style compressed --watch",
+		"build:styles": "concurrently 'npm:watch:tw' 'npm:watch:gb'",
+		"watch:gb": "sass src/global.scss src/global.css --no-source-map --style compressed --watch",
 		"watch:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
 		"lint": "eslint --fix .",
 		"eslint": "eslint ."
@@ -51,7 +50,7 @@
 		},
 		"linux": {
 			"target": [
-				"deb",
+				"appImage",
 				"zip"
 			],
 			"maintainer": "levminer@levminer.com",
@@ -63,8 +62,8 @@
 			},
 			"artifactName": "authme-${version}-linux-x64-portable.zip"
 		},
-		"deb": {
-			"artifactName": "authme-${version}-linux-x64-installer.deb"
+		"appImage": {
+			"artifactName": "authme-${version}-linux-x64-installer.appimage"
 		},
 		"mac": {
 			"target": [
@@ -83,23 +82,24 @@
 		"@electron/remote": "^2.0.1",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
-		"@sentry/electron": "^3.0.0-beta.1",
+		"@treverix/custom-electron-titlebar": "^4.2.0",
 		"auto-launch": "^5.0.5",
 		"axios": "^0.24.0",
 		"bcryptjs": "^2.4.3",
-		"cryptr": "^6.0.2",
 		"electron-context-menu": "^3.1.1",
 		"electron-debug": "^3.2.0",
+		"electron-updater": "^4.6.5",
 		"protons": "^2.0.3",
-		"qrcode": "^1.4.4",
-		"qrcode-decoder": "^0.2.2"
+		"qrcode-decoder": "^0.2.2",
+		"qrcode-generator": "^1.4.4"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.3.4",
 		"autoprefixer": "^10.4.0",
-		"electron": "^15.1.2",
-		"electron-builder": "^22.13.1",
-		"eslint": "^8.1.0",
+		"concurrently": "^6.4.0",
+		"electron": "^16.0.4",
+		"electron-builder": "^22.14.5",
+		"eslint": "^8.3.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
@@ -108,8 +108,8 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^5.1.1",
 		"eslint-plugin-standard": "^5.0.0",
-		"prettier": "^2.4.1",
-		"sass": "^1.43.4",
+		"prettier": "^2.5.0",
+		"sass": "^1.44.0",
 		"tailwindcss": "^2.2.19"
 	},
 	"engines": {
