--- a/package.json
+++ b/package.json
@@ -79,10 +79,10 @@
 		}
 	},
 	"dependencies": {
+		"@6c65726f79/custom-titlebar": "^0.5.0",
 		"@electron/remote": "^2.0.1",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
-		"@treverix/custom-electron-titlebar": "^4.2.0",
 		"auto-launch": "^5.0.5",
 		"axios": "^0.24.0",
 		"bcryptjs": "^2.4.3",
@@ -99,16 +99,16 @@
 		"concurrently": "^6.4.0",
 		"electron": "^16.0.4",
 		"electron-builder": "^22.14.5",
-		"eslint": "^8.3.0",
+		"eslint": "^8.4.1",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
 		"eslint-config-standard": "^16.0.3",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-promise": "^5.1.1",
+		"eslint-plugin-promise": "^5.2.0",
 		"eslint-plugin-standard": "^5.0.0",
-		"prettier": "^2.5.0",
+		"prettier": "^2.5.1",
 		"sass": "^1.44.0",
 		"tailwindcss": "^2.2.19"
 	},
