--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "authme",
 	"productName": "Authme",
-	"version": "3.0.0-beta.0",
+	"version": "3.0.0-beta.1",
 	"description": "Simple cross platform two-factor authentication app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -79,10 +79,10 @@
 		}
 	},
 	"dependencies": {
+		"@6c65726f79/custom-titlebar": "^0.5.6",
 		"@electron/remote": "^2.0.1",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
-		"@treverix/custom-electron-titlebar": "^4.2.0",
 		"auto-launch": "^5.0.5",
 		"axios": "^0.24.0",
 		"bcryptjs": "^2.4.3",
@@ -94,23 +94,23 @@
 		"qrcode-generator": "^1.4.4"
 	},
 	"devDependencies": {
-		"@tailwindcss/forms": "^0.3.4",
+		"@tailwindcss/forms": "^0.4.0",
 		"autoprefixer": "^10.4.0",
-		"concurrently": "^6.4.0",
-		"electron": "^16.0.4",
+		"concurrently": "^6.5.0",
+		"electron": "^16.0.5",
 		"electron-builder": "^22.14.5",
-		"eslint": "^8.3.0",
+		"eslint": "^8.5.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
 		"eslint-config-standard": "^16.0.3",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-promise": "^5.1.1",
+		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-standard": "^5.0.0",
-		"prettier": "^2.5.0",
-		"sass": "^1.44.0",
-		"tailwindcss": "^2.2.19"
+		"prettier": "^2.5.1",
+		"sass": "^1.45.0",
+		"tailwindcss": "^3.0.7"
 	},
 	"engines": {
 		"node": ">=15.0.0",
