--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
 		"appId": "com.levminer.authme",
 		"files": [
 			"!screenshots",
-			"!sample",
+			"!samples",
 			"!scripts",
+			"!tests",
 			"!**/*.scss",
-			"!**/*.ts",
 			"!.*"
 		],
 		"win": {
@@ -94,9 +94,10 @@
 		"qrcode-generator": "^1.4.4"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.17.1",
 		"@tailwindcss/forms": "^0.4.0",
 		"autoprefixer": "^10.4.0",
-		"concurrently": "^6.5.0",
+		"concurrently": "^6.5.1",
 		"electron": "^16.0.5",
 		"electron-builder": "^22.14.5",
 		"eslint": "^8.5.0",
@@ -108,8 +109,9 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-standard": "^5.0.0",
+		"playwright": "^1.17.1",
 		"prettier": "^2.5.1",
-		"sass": "^1.45.0",
+		"sass": "^1.45.1",
 		"tailwindcss": "^3.0.7"
 	},
 	"engines": {
