--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 	"dependencies": {
 		"@6c65726f79/custom-titlebar": "^0.8.0",
 		"@electron/remote": "^2.0.1",
+		"@levminer/languages": "file:languages",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
 		"auto-launch": "^5.0.5",
@@ -95,7 +96,7 @@
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.4.0",
 		"concurrently": "^7.0.0",
-		"electron": "^16.0.6",
+		"electron": "^16.0.7",
 		"electron-builder": "^22.14.5",
 		"eslint": "^8.6.0",
 		"eslint-config-node": "^4.1.0",
@@ -107,7 +108,7 @@
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-standard": "^5.0.0",
 		"prettier": "^2.5.1",
-		"sass": "^1.47.0",
+		"sass": "^1.48.0",
 		"tailwindcss": "^3.0.13"
 	},
 	"engines": {
