Get draft in upload to release workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,14 +27,14 @@ jobs:
       - uses: octokit/request-action@v2.x
         id: get_latest_release
         with:
-          route: GET /repos/:repository/releases/latest
+          route: GET /repos/:repository/releases
           repository: ${{ github.repository }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: get upload url
         id: get_upload_url
         run: >
-          url=$(echo "$response" | jq -r '.upload_url')
+          url=$(echo "$response" | jq -r '[0].upload_url')
 
           echo "::set-output name=url::$url"
         env:
