--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
       - name: get upload url
         id: get_upload_url
         run: >
-          url=$(echo "$response" | jq -r '[0].upload_url')
+          url=$(echo "$response" | jq -r ".[0].upload_url")
 
           echo "::set-output name=url::$url"
         env:
