--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,8 +85,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{steps.get_upload_url.outputs.url}}
-          asset_path: ./dist/authme-${{steps.version.outputs.prop}}-linux-x64-installer.exe
-          asset_name: authme-${{steps.version.outputs.prop}}-linux-x64-installer.exe
+          asset_path: ./dist/authme-${{steps.version.outputs.prop}}-linux-x64-installer.appimage
+          asset_name: authme-${{steps.version.outputs.prop}}-linux-x64-installer.appimage
           asset_content_type: application/octet-stream
       - name: Upload the linux portable asset
         if: runner.os == 'Linux'
@@ -106,8 +106,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{steps.get_upload_url.outputs.url}}
-          asset_path: ./dist/authme-${{steps.version.outputs.prop}}-mac-x64-installer.exe
-          asset_name: authme-${{steps.version.outputs.prop}}-mac-x64-installer.exe
+          asset_path: ./dist/authme-${{steps.version.outputs.prop}}-mac-x64-installer.dmg
+          asset_name: authme-${{steps.version.outputs.prop}}-mac-x64-installer.dmg
           asset_content_type: application/octet-stream
       - name: Upload the mac portable asset
         if: runner.os == 'macOS'
