--- a/.github/workflows/release-upload.yml
+++ b/.github/workflows/release-upload.yml
@@ -1,8 +1,8 @@
-name: Test
+name: Release upload
 on:
   push:
     branches:
-      - dev
+      - main
 jobs:
   build:
     runs-on: ${{matrix.os}}
