--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -18,6 +18,9 @@ jobs:
         steps:
             - name: Checkout repository
               uses: actions/checkout@v2
+            - uses: actions/setup-node@v2
+              with:
+                node-version: '16'
             - name: Initialize CodeQL
               uses: github/codeql-action/init@v1
               with:
