--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,6 +5,9 @@ jobs:
         runs-on: windows-latest
         steps:
             - uses: actions/checkout@v2
+            - uses: actions/setup-node@v2
+              with:
+                node-version: '16'
             - name: Install modules
               run: npm ci
             - name: Run Lint
