--- a/.github/workflows/release-artifacts.yml
+++ b/.github/workflows/release-artifacts.yml
@@ -1,7 +1,7 @@
 name: Release Artifacts
 on:
   push:
-    branches: [main, dev]
+    branches: [main]
 jobs:
   build:
     runs-on: ${{matrix.os}}
