--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "authme",
 	"productName": "Authme",
-	"version": "3.0.1",
+	"version": "3.1.0",
 	"description": "Simple cross platform two-factor authentication app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -78,12 +78,13 @@
 		}
 	},
 	"dependencies": {
-		"@6c65726f79/custom-titlebar": "^0.8.0",
-		"@electron/remote": "^2.0.1",
+		"@6c65726f79/custom-titlebar": "^0.9.0",
+		"@electron/remote": "^2.0.4",
+		"@levminer/languages": "file:languages",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
 		"auto-launch": "^5.0.5",
-		"axios": "^0.24.0",
+		"axios": "^0.25.0",
 		"bcryptjs": "^2.4.3",
 		"electron-context-menu": "^3.1.1",
 		"electron-debug": "^3.2.0",
@@ -95,9 +96,9 @@
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.4.0",
 		"concurrently": "^7.0.0",
-		"electron": "^16.0.6",
-		"electron-builder": "^22.14.5",
-		"eslint": "^8.6.0",
+		"electron": "^17.0.0",
+		"electron-builder": "^22.14.13",
+		"eslint": "^8.8.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
@@ -107,11 +108,11 @@
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-standard": "^5.0.0",
 		"prettier": "^2.5.1",
-		"sass": "^1.46.0",
-		"tailwindcss": "^3.0.12"
+		"sass": "^1.49.7",
+		"tailwindcss": "^3.0.18"
 	},
 	"engines": {
-		"node": ">=15.0.0",
+		"node": ">=16.0.0",
 		"npm": ">=7.0.0"
 	}
 }
