--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64",
 		"build:test": "node scripts/alpha-build.js && electron-builder --publish=never --x64 --dir -c scripts/test-build.json",
 		"build:styles": "concurrently 'npm:watch:tw' 'npm:watch:gb'",
-		"watch:gb": "sass src/global.scss src/global.css --no-source-map --style compressed --watch",
-		"watch:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
+		"watch:gb": "sass styles/global.scss styles/global.css --no-source-map --style compressed --watch",
+		"watch:tw": "tailwindcss build -i styles/tailwind.scss -o styles/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
 		"lint": "eslint --fix .",
 		"eslint": "eslint ."
 	},
@@ -79,7 +79,7 @@
 	},
 	"dependencies": {
 		"@6c65726f79/custom-titlebar": "^0.9.1",
-		"@electron/remote": "^2.0.4",
+		"@electron/remote": "^2.0.5",
 		"@levminer/languages": "file:languages",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
@@ -98,15 +98,15 @@
 		"concurrently": "^7.0.0",
 		"electron": "^17.0.0",
 		"electron-builder": "^22.14.13",
-		"eslint": "^8.9.0",
+		"eslint": "^8.10.0",
 		"eslint-config-prettier": "^8.4.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
 		"prettier": "^2.5.1",
-		"prettier-plugin-tailwindcss": "^0.1.7",
-		"sass": "^1.49.8",
+		"prettier-plugin-tailwindcss": "^0.1.8",
+		"sass": "^1.49.9",
 		"tailwindcss": "^3.0.23"
 	},
 	"engines": {
