--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "authme",
 	"productName": "Authme",
-	"version": "3.1.0",
+	"version": "3.1.1",
 	"description": "Simple cross platform two-factor authentication app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -14,8 +14,8 @@
 		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64",
 		"build:test": "node scripts/alpha-build.js && electron-builder --publish=never --x64 --dir -c scripts/test-build.json",
 		"build:styles": "concurrently 'npm:watch:tw' 'npm:watch:gb'",
-		"watch:gb": "sass src/global.scss src/global.css --no-source-map --style compressed --watch",
-		"watch:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
+		"watch:gb": "sass styles/global.scss styles/global.css --no-source-map --style compressed --watch",
+		"watch:tw": "tailwindcss build -i styles/tailwind.scss -o styles/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
 		"lint": "eslint --fix .",
 		"eslint": "eslint ."
 	},
@@ -78,15 +78,15 @@
 		}
 	},
 	"dependencies": {
-		"@6c65726f79/custom-titlebar": "^0.9.0",
-		"@electron/remote": "^2.0.4",
+		"@6c65726f79/custom-titlebar": "^0.9.1",
+		"@electron/remote": "^2.0.5",
 		"@levminer/languages": "file:languages",
 		"@levminer/lib": "file:lib",
 		"@levminer/speakeasy": "^1.3.1",
 		"auto-launch": "^5.0.5",
-		"axios": "^0.25.0",
+		"axios": "^0.26.0",
 		"bcryptjs": "^2.4.3",
-		"electron-context-menu": "^3.1.1",
+		"electron-context-menu": "^3.1.2",
 		"electron-debug": "^3.2.0",
 		"electron-updater": "^4.6.5",
 		"protons": "^2.0.3",
@@ -94,22 +94,20 @@
 		"qrcode-generator": "^1.4.4"
 	},
 	"devDependencies": {
-		"@tailwindcss/forms": "^0.4.0",
+		"@tailwindcss/forms": "^0.5.0",
 		"concurrently": "^7.0.0",
 		"electron": "^17.0.0",
 		"electron-builder": "^22.14.13",
-		"eslint": "^8.8.0",
-		"eslint-config-node": "^4.1.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-config-promise": "^2.0.2",
-		"eslint-config-standard": "^16.0.3",
+		"eslint": "^8.10.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
-		"eslint-plugin-standard": "^5.0.0",
 		"prettier": "^2.5.1",
-		"sass": "^1.49.7",
-		"tailwindcss": "^3.0.18"
+		"prettier-plugin-tailwindcss": "^0.1.8",
+		"sass": "^1.49.9",
+		"tailwindcss": "^3.0.23"
 	},
 	"engines": {
 		"node": ">=16.0.0",
