--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.0",
 		"concurrently": "^7.0.0",
-		"electron": "^17.0.0",
+		"electron": "^18.0.0-beta.3",
 		"electron-builder": "^22.14.13",
 		"eslint": "^8.11.0",
 		"eslint-config-prettier": "^8.5.0",
