--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
 	"author": "Levminer",
 	"license": "GPL-3.0",
 	"scripts": {
+		"dev": "npm run start",
 		"start": "node scripts/alpha-build.js && electron .",
-		"dev": "node scripts/release-build.js && electron .",
+		"release": "node scripts/release-build.js && electron .",
 		"build": "npm run build:release",
 		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64",
 		"build:beta": "node scripts/beta-build.js && electron-builder --publish=never --x64",
 		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64",
 		"build:test": "node scripts/alpha-build.js && electron-builder --publish=never --x64 --dir -c scripts/test-build.json",
-		"build:styles": "concurrently 'npm:watch:tw' 'npm:watch:gb'",
+		"watch:styles": "concurrently 'npm:watch:tw' 'npm:watch:gb'",
 		"watch:gb": "sass styles/global.scss styles/global.css --no-source-map --style compressed --watch",
 		"watch:tw": "tailwindcss build -i styles/tailwind.scss -o styles/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
 		"lint": "eslint --fix .",
@@ -79,10 +80,10 @@
 	},
 	"dependencies": {
 		"@6c65726f79/custom-titlebar": "^0.9.1",
-		"@electron/remote": "^2.0.7",
+		"@electron/remote": "^2.0.8",
 		"@levminer/languages": "file:languages",
 		"@levminer/lib": "file:lib",
-		"@levminer/speakeasy": "^1.3.1",
+		"@levminer/speakeasy": "^1.4.0",
 		"auto-launch": "^5.0.5",
 		"axios": "^0.26.1",
 		"bcryptjs": "^2.4.3",
@@ -95,18 +96,18 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.0",
-		"concurrently": "^7.0.0",
-		"electron": "^18.0.0-beta.3",
+		"concurrently": "^7.1.0",
+		"electron": "^18.0.2",
 		"electron-builder": "^22.14.13",
-		"eslint": "^8.11.0",
+		"eslint": "^8.12.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
-		"prettier": "^2.5.1",
+		"prettier": "^2.6.2",
 		"prettier-plugin-tailwindcss": "^0.1.8",
-		"sass": "^1.49.9",
+		"sass": "^1.49.11",
 		"tailwindcss": "^3.0.23"
 	},
 	"engines": {
