--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
 		"win": {
 			"target": [
 				"nsis",
-				"zip",
-				"appx"
+				"zip"
 			],
 			"icon": "img/icon.ico",
 			"artifactName": "authme-${version}-windows-x64-portable.zip"
@@ -98,7 +97,7 @@
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.0",
 		"concurrently": "^7.1.0",
-		"electron": "^18.0.3",
+		"electron": "^18.0.4",
 		"electron-builder": "^23.0.6",
 		"eslint": "^8.13.0",
 		"eslint-config-prettier": "^8.5.0",
