--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"watch:styles": "concurrently 'npm:watch:tw' 'npm:watch:gb'",
 		"watch:gb": "sass styles/global.scss styles/global.css --no-source-map --style compressed --watch",
 		"watch:tw": "tailwindcss build -i styles/tailwind.scss -o styles/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
-		"test": "playwright test",
+		"test": "npx playwright test",
 		"lint": "eslint --fix .",
 		"eslint": "eslint ."
 	},
@@ -96,21 +96,20 @@
 		"qrcode-generator": "^1.4.4"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.21.1",
-		"@tailwindcss/forms": "^0.5.1",
-		"concurrently": "^7.1.0",
-		"electron": "^18.2.3",
+		"@playwright/test": "^1.22.2",
+		"@tailwindcss/forms": "^0.5.2",
+		"concurrently": "^7.2.1",
+		"electron": "^19.0.0",
 		"electron-builder": "^23.0.9",
-		"eslint": "^8.15.0",
+		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
-		"playwright": "^1.21.1",
 		"prettier": "^2.6.2",
-		"prettier-plugin-tailwindcss": "^0.1.10",
-		"sass": "^1.51.0",
+		"prettier-plugin-tailwindcss": "^0.1.11",
+		"sass": "^1.52.1",
 		"tailwindcss": "^3.0.24"
 	},
 	"engines": {
