Remove sass styles

--- a/package.json
+++ b/package.json
@@ -6,17 +6,13 @@
 	"author": "Levminer",
 	"license": "GPL-3.0",
 	"scripts": {
-		"dev": "npm run start",
 		"start": "node scripts/alpha-build.js && electron .",
 		"release": "node scripts/release-build.js && electron .",
-		"build": "npm run build:release",
-		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64",
+		"build": "node scripts/release-build.js && electron-builder --publish=never --x64",
 		"build:beta": "node scripts/beta-build.js && electron-builder --publish=never --x64",
 		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64",
 		"build:test": "node scripts/alpha-build.js && electron-builder --publish=never --x64 --dir -c scripts/test-build.json",
-		"watch:styles": "concurrently 'npm:watch:tw' 'npm:watch:gb'",
-		"watch:gb": "sass styles/global.scss styles/global.css --no-source-map --style compressed --watch",
-		"watch:tw": "tailwindcss build -i styles/tailwind.scss -o styles/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
+		"watch": "tailwindcss build -i styles/index.css -o styles/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
 		"test": "npx playwright test",
 		"lint": "eslint --fix .",
 		"eslint": "eslint ."
@@ -92,14 +88,14 @@
 		"electron-debug": "^3.2.0",
 		"electron-updater": "^5.0.1",
 		"protons": "^2.0.3",
-		"qrcode-decoder": "^0.2.2",
+		"qrcode-decoder": "^0.3.1",
 		"qrcode-generator": "^1.4.4"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.22.2",
 		"@tailwindcss/forms": "^0.5.2",
 		"concurrently": "^7.2.1",
-		"electron": "^19.0.0",
+		"electron": "^19.0.1",
 		"electron-builder": "^23.0.9",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -109,7 +105,6 @@
 		"eslint-plugin-promise": "^6.0.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-tailwindcss": "^0.1.11",
-		"sass": "^1.52.1",
 		"tailwindcss": "^3.0.24"
 	},
 	"engines": {
