--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"dev": "node scripts/server.js",
 		"build": "node scripts/buildNumber.cjs alpha false && tauri build",
 		"build:alpha": "node scripts/buildNumber.cjs alpha false && tauri build",
-		"build:bundle": "node scripts/build.js"
+		"build:bundle": "node scripts/build.js",
+		"check": "svelte-check && tsc --noEmit && eslint ."
 	},
 	"devDependencies": {
 		"@esbuild-plugins/node-globals-polyfill": "^0.1.1",
@@ -37,6 +38,7 @@
 		"prettier": "^2.7.0",
 		"prettier-plugin-tailwindcss": "^0.1.13",
 		"svelte": "^3.50.1",
+		"svelte-check": "^2.9.2",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.8",
 		"tinro": "^0.6.12",
